--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,39 @@ println("app start")
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 //apply plugin: 'kotlin-kapt'
+
+apply plugin: 'versionplugin'
+//apply plugin: com.hawksjamesf.plugin.VersionPluginForJava
+apply plugin: 'versionpluginforjava'
+apply plugin: 'versionpluginforkotlin'
+
+
+versionPlugin {
+    buildTypeMatcher = 'debug'
+//        '$appName/project/buildType-v_$versionName-c_$versionCode'
+//        fileFormat = '$appName-v_$versionName-c_$versionCode'
+    fileFormat = '$project-$appName-$buildType-v_$versionName-c_$versionCode'
+}
+
+versionPluginForJava {
+    buildTypeMatcher = "debug"
+//        '$appName/project/buildType-v_$versionName-c_$versionCode'
+//        fileFormat = '$appName-v_$versionName-c_$versionCode'
+    fileFormat = "sadfasd"
+}
+
+taskForJava {
+    message = "Hi"
+    recipient = "taskForJava"
+}
+
+versionPluginForKotlin {
+    buildTypeMatcher = "debug"
+//        '$appName/project/buildType-v_$versionName-c_$versionCode'
+//        fileFormat = '$appName-v_$versionName-c_$versionCode'
+    fileFormat = "sadfasd"
+}
+
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
     buildToolsVersion rootProject.ext.buildToolsVersion
@@ -43,6 +76,11 @@ android {
     productFlavors {
 
     }
+
+//    useLibrary 'android.test.runner'
+//    useLibrary 'android.test.base'
+//    useLibrary 'android.test.mock'
+
 }
 
 dependencies {
@@ -52,6 +90,36 @@ dependencies {
     annotationProcessor "com.google.dagger:dagger-compiler:${rootProject.ext.daggerVersion}"
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+
+    // Dependencies for local unit tests
+    testImplementation "junit:junit:${rootProject.ext.junitVersion}"
+    testImplementation "org.mockito:mockito-all:1.10.19"
+    testImplementation "org.mockito:mockito-core:${rootProject.ext.mockitoVersion}"
+    testImplementation "org.mockito:mockito-inline:${rootProject.ext.mockitoVersion}"
+    testImplementation "org.hamcrest:hamcrest-all:${rootProject.ext.hamcrestVersion}"
+
+    // Espresso dependencies
+    androidTestImplementation "com.android.support.test.espresso:espresso-core:${rootProject.ext.espressoVersion}"
+    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:${rootProject.ext.espressoVersion}"
+    androidTestImplementation "com.android.support.test.espresso:espresso-intents:${rootProject.ext.espressoVersion}"
+    androidTestImplementation "com.android.support.test.espresso:espresso-accessibility:${rootProject.ext.espressoVersion}"
+    androidTestImplementation "com.android.support.test.espresso:espresso-web:${rootProject.ext.espressoVersion}"
+    androidTestImplementation "com.android.support.test.espresso.idling:idling-concurrent:${rootProject.ext.espressoVersion}"
+    // The following Espresso dependency can be either "implementation"
+    // or "androidTestImplementation", depending on whether you want the
+    // dependency to appear on your APK's compile classpath or the test APK
+    // classpath.
+    androidTestImplementation "com.android.support.test.espresso:espresso-idling-resource:${rootProject.ext.espressoVersion}"
+
+    // Dependencies for Android unit tests
+    androidTestImplementation "junit:junit:${rootProject.ext.junitVersion}"
+    androidTestImplementation "org.mockito:mockito-android:${rootProject.ext.mockitoVersion}"
+//    androidTestImplementation 'com.google.dexmaker:dexmaker:1.2'
+//    androidTestImplementation 'com.google.dexmaker:dexmaker-mockito:1.2'
+
+    // Android Testing Support Library's runner and rules
+    androidTestImplementation "com.android.support.test:runner:${rootProject.ext.runnerVersion}"
+    androidTestImplementation "com.android.support.test:rules:${rootProject.ext.rulesVersion}"
 
 }
 println("app end")
