--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,6 @@
 
 println("root project start")
 buildscript {
-    ext.kotlin_version = '1.2.71'
     repositories {
         jcenter()
         google()
@@ -13,7 +12,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${KOTLIN_VERSION}"
 //
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -53,10 +52,9 @@ ext {
     okhttpVersion = '3.11.0'
 //    okhttpMockVersion='3.11.0'
     okhttpLoggingVersion = '3.4.1'
-    kotlin_version = '1.2.71'
     loggerVersion = '2.1.1'
     utilcodeVersion = '1.11.1'
-    daggerVersion='2.15'
+    daggerVersion = '2.15'
 
     //test
     junitVersion = '4.12'
