--- a/common/build.gradle
+++ b/common/build.gradle
@@ -49,8 +49,6 @@ dependencies {
     api 'org.greenrobot:eventbus:3.0.0'
     api "io.reactivex.rxjava2:rxjava:${rootProject.ext.rxjavaVersion}"
     api "io.reactivex.rxjava2:rxandroid:${rootProject.ext.rxandroidVersion}"
-    api 'com.tencent.bugly:crashreport:2.6.6.1'
-    api 'com.tencent.bugly:nativecrashreport:3.3.1'
     // Test helpers for RoombuildToolsVersion
     testImplementation 'android.arch.persistence.room:testing:1.0.0'
     // Room (use 1.1.0-alpha1 for latest alpha)
@@ -60,10 +58,21 @@ dependencies {
     api 'android.arch.persistence.room:rxjava2:1.0.0'
     api "com.android.support:multidex:1.0.3"
     api "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
-    api "com.android.support:design:${rootProject.ext.supportLibraryVersion}"
     api "com.android.support:recyclerview-v7:${rootProject.ext.supportLibraryVersion}"
 
+    api("com.android.support:design:${rootProject.ext.supportLibraryVersion}", {
+        exclude group: 'com.android.support', module: 'support-v4'
+    })
+    /*
+   该库和`com.android.support:design:`都存在v4，编译时会报错：
+   com.android.build.api.transform.TransformException: java.util.zip.ZipException: duplicate entry: android/support/v4/app/INotificationSideChannel$Stub$Proxy.class
+   解决方法：需要exclude掉v4包
+    */
+//    api 'com.google.android.material:material:1.0.0'
 
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${KOTLIN_VERSION}"
 
+    api 'com.tencent.bugly:crashreport:2.6.6.1'
+    api 'com.tencent.bugly:nativecrashreport:3.3.1'
+//    api 'com.tencent.bugly:crashreport_upgrade:1.3.5'
 }
