--- a/common/build.gradle
+++ b/common/build.gradle
@@ -75,4 +75,7 @@ dependencies {
     api 'com.tencent.bugly:crashreport:2.6.6.1'
     api 'com.tencent.bugly:nativecrashreport:3.3.1'
 //    api 'com.tencent.bugly:crashreport_upgrade:1.3.5'
+    // https://mvnrepository.com/artifact/joda-time/joda-time
+    api 'joda-time:joda-time:2.10'
+
 }
