--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
         android:name=".SimpleWeatherApplication"
@@ -15,7 +15,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.HomeActivity"/>
+        <activity android:name=".ui.home.HomeActivity"/>
 
         <activity
             android:name=".ui.SplashActivity"
@@ -34,15 +34,18 @@
 
         <!-- You don't need to include android:required="false" if your app's
      minSdkVersion is 28 or higher. -->
-        <uses-library android:name="android.test.runner"
-                      android:required="false" />
+        <uses-library
+            android:name="android.test.runner"
+            android:required="false"/>
         <!-- For both of these declarations, you don't need to include
              android:required="false" if your app's minSdkVersion is 28
              or higher. -->
-        <uses-library android:name="android.test.base"
-                      android:required="false" />
-        <uses-library android:name="android.test.mock"
-                      android:required="false" />
+        <uses-library
+            android:name="android.test.base"
+            android:required="false"/>
+        <uses-library
+            android:name="android.test.mock"
+            android:required="false"/>
     </application>
 
 </manifest>
