--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,9 @@ buildscript {
     repositories {
         jcenter()
         google()
-//        maven {
-//            url "https://maven.google.com"
-//        }
+        maven {
+            url "https://maven.google.com"
+        }
 
     }
     dependencies {
