--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- You don't need to include android:required="false" if your app's
+     minSdkVersion is 28 or higher. -->
+        <uses-library
+            android:name="android.test.runner"
+            android:required="false"/>
+        <!-- For both of these declarations, you don't need to include
+             android:required="false" if your app's minSdkVersion is 28
+             or higher. -->
+        <uses-library
+            android:name="android.test.base"
+            android:required="false"/>
+        <uses-library
+            android:name="android.test.mock"
+            android:required="false"/>
+
         <activity android:name=".ui.home.HomeActivity"/>
 
         <activity
@@ -32,20 +48,10 @@
             android:theme="@style/AppTheme"/>
 
 
-        <!-- You don't need to include android:required="false" if your app's
-     minSdkVersion is 28 or higher. -->
-        <uses-library
-            android:name="android.test.runner"
-            android:required="false"/>
-        <!-- For both of these declarations, you don't need to include
-             android:required="false" if your app's minSdkVersion is 28
-             or higher. -->
-        <uses-library
-            android:name="android.test.base"
-            android:required="false"/>
-        <uses-library
-            android:name="android.test.mock"
-            android:required="false"/>
+        <activity android:name=".ui.login.SignInActivity"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden"/>
+        <activity android:name=".ui.login.SignUpActivity"
+            android:windowSoftInputMode="adjustPan|stateAlwaysHidden"/>
     </application>
 
 </manifest>
