--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,49 @@ buildscript {
     repositories {
         jcenter()
         google()
-        maven {
-            url "https://maven.google.com"
-        }
+//        maven {
+//            url "https://maven.google.com"
+//        }
+
+    }
+    ext {
+        compileSdkVersion = 28
+        buildToolsVersion = '28.0.2'
+        minSdkVersion = 17
+        targetSdkVersion = 26
+        versionCode = 2
+        versionName = "2.0"
+        androidPluginVersion = '3.2.0'
+
+        //test
+        junitVersion = '4.12'
+        runnerVersion = '1.0.2'
+        rulesVersion = '1.0.2'
+        espressoVersion = '3.0.2'
+        mockitoVersion = '2.23.0'
+        hamcrestVersion = '1.3'
+
+        // App dependencies
+        supportLibraryVersion = '27.1.1'
+        rxjavaVersion = '1.1.7'
+        rxandroidVersion = '2.1.0'
+        glideVersion = '3.7.0'
+        retrofitVersion = '2.3.0'
+//    retrofitVersion='2.4.0'
+        okhttpVersion = '3.11.0'
+//    okhttpMockVersion='3.11.0'
+        okhttpLoggingVersion = '3.4.1'
+        loggerVersion = '2.1.1'
+        utilcodeVersion = '1.11.1'
+        daggerVersion = '2.15'
+        realmVersion = '5.7.0'
+        leakcanaryVersion='1.6.2'
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath "com.android.tools.build:gradle:$androidPluginVersion"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${KOTLIN_VERSION}"
+        classpath "io.realm:realm-gradle-plugin:$realmVersion"
 //
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,7 +58,7 @@ allprojects {
     repositories {
         jcenter()
         google()
-        maven { url "https://jitpack.io" }
+//        maven { url "https://jitpack.io" }
     }
 }
 
@@ -35,35 +70,6 @@ task clean(type: Delete) {
 //    println("hello world")
 //
 //}
-ext {
-    compileSdkVersion = 28
-    buildToolsVersion = '28.0.2'
-    minSdkVersion = 17
-    targetSdkVersion = 26
-    versionCode = 2
-    versionName = "2.0"
 
-    // App dependencies
-    supportLibraryVersion = '27.1.1'
-    rxjavaVersion = '1.1.7'
-    rxandroidVersion = '2.1.0'
-    glideVersion = '3.7.0'
-    retrofitVersion = '2.3.0'
-//    retrofitVersion='2.4.0'
-    okhttpVersion = '3.11.0'
-//    okhttpMockVersion='3.11.0'
-    okhttpLoggingVersion = '3.4.1'
-    loggerVersion = '2.1.1'
-    utilcodeVersion = '1.11.1'
-    daggerVersion = '2.15'
 
-    //test
-    junitVersion = '4.12'
-    runnerVersion = '1.0.2'
-    rulesVersion = '1.0.2'
-    espressoVersion = '3.0.2'
-    mockitoVersion = '2.23.0'
-    hamcrestVersion = '1.3'
-
-}
 println("root project end")
