--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: "kotlin-android-extensions"
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
@@ -30,15 +33,33 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    api "com.android.support:multidex:1.0.3"
+    api "com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0"
+    api "io.reactivex.rxjava2:rxkotlin:2.2.0"
+    //    api 'com.jakewharton.timber:timber:4.5.1'
+    api "com.blankj:utilcode:${rootProject.ext.utilcodeVersion}"
+    api 'joda-time:joda-time:2.10'
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${KOTLIN_VERSION}"
+    api "io.reactivex.rxjava2:rxjava:${rootProject.ext.rxjavaVersion}"
+    api "io.reactivex.rxjava2:rxandroid:${rootProject.ext.rxandroidVersion}"
+
+    /**
+     * ===============================decoupling start================================
+     */
+    api 'org.greenrobot:eventbus:3.1.1'
     // Dagger dependencies
     annotationProcessor "com.google.dagger:dagger-compiler:$rootProject.ext.daggerVersion"
     api "com.google.dagger:dagger:$rootProject.ext.daggerVersion"
     api "com.google.dagger:dagger-android:$rootProject.ext.daggerVersion"
     api "com.google.dagger:dagger-android-support:$rootProject.ext.daggerVersion"
     annotationProcessor "com.google.dagger:dagger-android-processor:$rootProject.ext.daggerVersion"
+    /**
+     * ===============================decoupling  end================================
+     */
 
+    /**
+     * ===============================network start====================================
+     */
     api "com.squareup.retrofit2:retrofit:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:retrofit-converters:${rootProject.ext.retrofitVersion}"
     api "com.squareup.retrofit2:converter-gson:${rootProject.ext.retrofitVersion}"
@@ -47,40 +68,62 @@ dependencies {
 //    api 'com.squareup.okhttp3:okhttp:3.8.1'
     api "com.squareup.okhttp3:logging-interceptor:${rootProject.ext.okhttpLoggingVersion}"
     api "com.squareup.okhttp3:mockwebserver:${rootProject.ext.okhttpVersion}"
-    //    api 'com.jakewharton.timber:timber:4.5.1'
-    api "com.blankj:utilcode:${rootProject.ext.utilcodeVersion}"
-    api "com.orhanobut:logger:${rootProject.ext.loggerVersion}"
 //    api 'com.google.code.gson:gson:2.8.2'
-    api 'org.greenrobot:eventbus:3.0.0'
-    api "io.reactivex.rxjava2:rxjava:${rootProject.ext.rxjavaVersion}"
-    api "io.reactivex.rxjava2:rxandroid:${rootProject.ext.rxandroidVersion}"
-    // Test helpers for RoombuildToolsVersion
-    testImplementation 'android.arch.persistence.room:testing:1.0.0'
-    // Room (use 1.1.0-alpha1 for latest alpha)
-    api 'android.arch.persistence.room:runtime:1.0.0'
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-    // RxJava support for Room
-    api 'android.arch.persistence.room:rxjava2:1.0.0'
-    api "com.android.support:multidex:1.0.3"
+    /**
+     * ===============================network end====================================
+     */
+
+    /**
+     * ================================database start==============================
+     */
+    //room database
+    testImplementation 'android.arch.persistence.room:testing:1.1.1'
+    api 'android.arch.persistence.room:runtime:1.1.1'
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    api 'android.arch.persistence.room:rxjava2:1.1.1'
+
+    //realm database
+    api "io.realm:realm-annotations:$realmVersion"
+    api "io.realm:realm-android-library:$realmVersion"
+    api "io.realm:realm-android-kotlin-extensions:$realmVersion"
+    annotationProcessor "io.realm:realm-annotations-processor:$realmVersion"
+    /**
+     * ================================database end==============================
+     */
+
+    /**
+     * ================================ui start=====================================
+     */
     api "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
     api "com.android.support:recyclerview-v7:${rootProject.ext.supportLibraryVersion}"
-
     api("com.android.support:design:${rootProject.ext.supportLibraryVersion}", {
         exclude group: 'com.android.support', module: 'support-v4'
     })
     /*
-   该库和`com.android.support:design:`都存在v4，编译时会报错：
-   com.android.build.api.transform.TransformException: java.util.zip.ZipException: duplicate entry: android/support/v4/app/INotificationSideChannel$Stub$Proxy.class
-   解决方法：需要exclude掉v4包
+   *该库和`com.android.support:design:`都存在v4，编译时会报错：
+   *com.android.build.api.transform.TransformException: java.util.zip.ZipException: duplicate entry: *android/support/v4/app/INotificationSideChannel$Stub$Proxy.class
+   *解决方法：需要exclude掉v4包
     */
 //    api 'com.google.android.material:material:1.0.0'
+    /**
+     * ================================ui end=====================================
+     */
 
-    api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${KOTLIN_VERSION}"
-
-    api 'com.tencent.bugly:crashreport:2.6.6.1'
+    /**
+     * ===============================monitor start=============================
+     */
+    //crash and anr
     api 'com.tencent.bugly:nativecrashreport:3.3.1'
 //    api 'com.tencent.bugly:crashreport_upgrade:1.3.5'
-    // https://mvnrepository.com/artifact/joda-time/joda-time
-    api 'joda-time:joda-time:2.10'
+    api 'com.tencent.bugly:crashreport:2.6.6.1'
+    api "com.orhanobut:logger:${rootProject.ext.loggerVersion}"
+    //memory leak
+    debugImplementation "com.squareup.leakcanary:leakcanary-android:${rootProject.ext.leakcanaryVersion}"
+    releaseImplementation "com.squareup.leakcanary:leakcanary-android-no-op:${rootProject.ext.leakcanaryVersion}"
+    // Optional, if you use support library fragments:
+    debugImplementation "com.squareup.leakcanary:leakcanary-support-fragment:${rootProject.ext.leakcanaryVersion}"
+    /**
+     * ===============================monitor end=============================
+     */
 
 }
