登入注册模块
- 注册功能完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <activity android:name=".ui.login.SignInActivity"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden"/>
         <activity android:name=".ui.login.SignUpActivity"
+                  android:parentActivityName=".ui.login.SignInActivity"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden"/>
     </application>
 
