--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,10 +71,10 @@ android {
     flavorDimensions('data_access')
     productFlavors {
 
-        mocked{
+        mocked {
             dimension 'data_access'
-            buildConfigField 'boolean','MOCKED_DATA_ACCESS','true'
-            buildConfigField 'String','WEATHER_URL','" "'
+            buildConfigField 'boolean', 'MOCKED_DATA_ACCESS', 'true'
+            buildConfigField 'String', 'WEATHER_URL', '" "'
         }
 //        real{
 //            dimension 'data_access'
@@ -91,8 +91,8 @@ android {
 
     }
 
-    sourceSets{
-        main.java.srcDirs+=["src/main/kotlin"]
+    sourceSets {
+        main.java.srcDirs += ["src/main/kotlin"]
     }
 
 //    useLibrary 'android.test.runner'
@@ -151,12 +151,25 @@ dependencies {
     // Dependencies for Android unit tests
     androidTestImplementation "junit:junit:${rootProject.ext.junitVersion}"
     androidTestImplementation "org.mockito:mockito-android:${rootProject.ext.mockitoVersion}"
-//    androidTestImplementation 'com.google.dexmaker:dexmaker:1.2'
-//    androidTestImplementation 'com.google.dexmaker:dexmaker-mockito:1.2'
+    androidTestImplementation 'com.google.dexmaker:dexmaker:1.2'
+    androidTestImplementation 'com.google.dexmaker:dexmaker-mockito:1.2'
 
     // Android Testing Support Library's runner and rules
     androidTestImplementation "com.android.support.test:runner:${rootProject.ext.runnerVersion}"
     androidTestImplementation "com.android.support.test:rules:${rootProject.ext.rulesVersion}"
+
+    //=============================== androidx ================================================
+//    implementation 'android.arch.navigation:navigation-fragment:1.0.0-alpha06'
+//    implementation 'android.arch.navigation:navigation-ui:1.0.0-alpha06'
+//    implementation 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha06'
+//    implementation 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha06'
+//    implementation 'androidx.appcompat:appcompat:1.0.0'
+//    implementation 'androidx.core:core-ktx:1.0.0'
+//    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    androidTestImplementation 'androidx.test:monitor:1.1.0'
+    androidTestImplementation 'androidx.multidex:multidex-instrumentation:2.0.0',{
+        exclude group: 'com.android.support', module: 'multidex'
+    }
 
 }
 println("app end")
