--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ buildscript {
         hamcrestVersion = '1.3'
 
         // App dependencies
-        supportLibraryVersion = '27.1.1'
+        supportLibraryVersion = '28.0.0'
         rxjavaVersion = '1.1.7'
         rxandroidVersion = '2.1.0'
         glideVersion = '3.7.0'
@@ -45,7 +45,7 @@ buildscript {
 
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:$androidPluginVersion"
+        classpath "com.android.tools.build:gradle:3.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${KOTLIN_VERSION}"
         classpath "io.realm:realm-gradle-plugin:$realmVersion"
 //
