--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ buildscript {
         hamcrestVersion = '1.3'
 
         // App dependencies
-        supportLibraryVersion = '28.0.0'
+        supportLibraryVersion = '1.0.0'
         rxjavaVersion = '1.1.7'
         rxandroidVersion = '2.1.0'
         glideVersion = '3.7.0'
@@ -46,7 +46,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:3.2.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${KOTLIN_VERSION}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$KOTLIN_VERSION"
         classpath "io.realm:realm-gradle-plugin:$realmVersion"
 //
         // NOTE: Do not place your application dependencies here; they belong
