--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
 
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
     }
 
@@ -33,7 +33,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    api "com.android.support:multidex:1.0.3"
+    api 'androidx.core:core-ktx:1.0.0'
+    api 'androidx.multidex:multidex:2.0.0'
     api "com.jakewharton.rxbinding2:rxbinding-kotlin:2.0.0"
     api "io.reactivex.rxjava2:rxkotlin:2.2.0"
     //    api 'com.jakewharton.timber:timber:4.5.1'
@@ -77,10 +78,10 @@ dependencies {
      * ================================database start==============================
      */
     //room database
-    testImplementation 'android.arch.persistence.room:testing:1.1.1'
-    api 'android.arch.persistence.room:runtime:1.1.1'
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
-    api 'android.arch.persistence.room:rxjava2:1.1.1'
+    testImplementation 'androidx.room:room-testing:2.1.0-alpha01'
+    api 'androidx.room:room-runtime:2.1.0-alpha01'
+    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha01'
+    api 'androidx.room:room-rxjava2:2.1.0-alpha01'
 
     //realm database
     api "io.realm:realm-annotations:$realmVersion"
@@ -94,11 +95,15 @@ dependencies {
     /**
      * ================================ui start=====================================
      */
-    api "com.android.support:appcompat-v7:${rootProject.ext.supportLibraryVersion}"
-    api "com.android.support:recyclerview-v7:${rootProject.ext.supportLibraryVersion}"
-    api("com.android.support:design:${rootProject.ext.supportLibraryVersion}", {
-        exclude group: 'com.android.support', module: 'support-v4'
-    })
+    api "androidx.appcompat:appcompat:${rootProject.ext.supportLibraryVersion}"
+    api "androidx.recyclerview:recyclerview:${rootProject.ext.supportLibraryVersion}"
+    api "com.google.android.material:material:${rootProject.ext.supportLibraryVersion}"
+
+    api 'android.arch.navigation:navigation-fragment:1.0.0-alpha06'
+    api 'android.arch.navigation:navigation-ui:1.0.0-alpha06'
+    api 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha06'
+    api 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha06'
+    api 'androidx.constraintlayout:constraintlayout:1.1.3'
     /*
    *该库和`com.android.support:design:`都存在v4，编译时会报错：
    *com.android.build.api.transform.TransformException: java.util.zip.ZipException: duplicate entry: *android/support/v4/app/INotificationSideChannel$Stub$Proxy.class
