--- a/app/build.gradle
+++ b/app/build.gradle
@@ -133,6 +133,9 @@ android {
 //    useLibrary 'android.test.runner'
 //    useLibrary 'android.test.base'
 //    useLibrary 'android.test.mock'
+    dataBinding {
+        enabled = true
+    }
 
 }
 
