编写通用工具

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ freeline_project_description.json
 /viewpagerindicator_library/viewpagerindicator_library.iml
 viewpagerindicator_library
 .DS_Store
+/generation_version.properties
