--- a/common/build.gradle
+++ b/common/build.gradle
@@ -43,11 +43,12 @@ dependencies {
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk7:${KOTLIN_VERSION}"
     api "io.reactivex.rxjava2:rxjava:${rootProject.ext.rxjavaVersion}"
     api "io.reactivex.rxjava2:rxandroid:${rootProject.ext.rxandroidVersion}"
+    api "com.android.support:support-vector-drawable:28.0.0"
 
     /**
      * ===============================mvvm start================================
      */
-    kapt "com.android.databinding:compiler:3.1.4"
+    annotationProcessor 'androidx.databinding:databinding-compiler:3.4.0-alpha02'
     api 'com.github.markzhai:databinding-rv-adapter:1.0.1'
 //    api 'com.trello.rxlifecycle3:rxlifecycle:3.0.0'
 //
@@ -110,10 +111,10 @@ dependencies {
      * ================================database start==============================
      */
     //room database
-    testImplementation 'androidx.room:room-testing:2.1.0-alpha01'
-    api 'androidx.room:room-runtime:2.1.0-alpha01'
-    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha01'
-    api 'androidx.room:room-rxjava2:2.1.0-alpha01'
+    testImplementation 'androidx.room:room-testing:2.1.0-alpha02'
+    api 'androidx.room:room-runtime:2.1.0-alpha02'
+    annotationProcessor 'androidx.room:room-compiler:2.1.0-alpha02'
+    api 'androidx.room:room-rxjava2:2.1.0-alpha02'
 
     //realm database
     api "io.realm:realm-annotations:$realmVersion"
@@ -129,18 +130,20 @@ dependencies {
      */
     api "androidx.appcompat:appcompat:${rootProject.ext.supportLibraryVersion}"
     api "androidx.recyclerview:recyclerview:${rootProject.ext.supportLibraryVersion}"
-    api "com.google.android.material:material:${rootProject.ext.supportLibraryVersion}"
 
-    api 'android.arch.navigation:navigation-fragment:1.0.0-alpha06'
-    api 'android.arch.navigation:navigation-ui:1.0.0-alpha06'
-    api 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha06'
-    api 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha06'
+    api 'android.arch.navigation:navigation-fragment:1.0.0-alpha07'
+    api 'android.arch.navigation:navigation-ui:1.0.0-alpha07'
+    api 'android.arch.navigation:navigation-fragment-ktx:1.0.0-alpha07'
+    api 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha07'
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    api 'androidx.palette:palette:1.0.0-beta01'
     /*
    *该库和`com.android.support:design:`都存在v4，编译时会报错：
    *com.android.build.api.transform.TransformException: java.util.zip.ZipException: duplicate entry: *android/support/v4/app/INotificationSideChannel$Stub$Proxy.class
    *解决方法：需要exclude掉v4包
     */
+    api "com.google.android.material:material:${rootProject.ext.supportLibraryVersion}"
 //    api 'com.google.android.material:material:1.0.0'
     /**
      * ================================ui end=====================================
