--- a/common/build.gradle
+++ b/common/build.gradle
@@ -137,7 +137,7 @@ dependencies {
     api 'android.arch.navigation:navigation-ui-ktx:1.0.0-alpha07'
     api 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    api 'androidx.palette:palette:1.0.0-beta01'
+    api 'androidx.palette:palette:1.0.0'
     /*
    *该库和`com.android.support:design:`都存在v4，编译时会报错：
    *com.android.build.api.transform.TransformException: java.util.zip.ZipException: duplicate entry: *android/support/v4/app/INotificationSideChannel$Stub$Proxy.class
