--- a/common/build.gradle
+++ b/common/build.gradle
@@ -143,8 +143,7 @@ dependencies {
    *com.android.build.api.transform.TransformException: java.util.zip.ZipException: duplicate entry: *android/support/v4/app/INotificationSideChannel$Stub$Proxy.class
    *解决方法：需要exclude掉v4包
     */
-    api "com.google.android.material:material:${rootProject.ext.supportLibraryVersion}"
-//    api 'com.google.android.material:material:1.0.0'
+    api "com.google.android.material:material:1.1.0-alpha01"
     /**
      * ================================ui end=====================================
      */
