--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ui.person.SettingsActivity">
+        </activity>
+        <activity
             android:name=".ui.MainActivity"
             android:label="@string/title_activity_main"
             android:launchMode="singleTop">
