登入模块ui层，模块名修改

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,11 +73,11 @@
 
 
         <activity
-            android:name="com.hawksjamesf.spacecraft.ui.login.SignInActivity"
+            android:name="com.hawksjamesf.spacecraft.ui.signin.SignInActivity"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden"/>
         <activity
-            android:name="com.hawksjamesf.spacecraft.ui.login.SignUpActivity"
-            android:parentActivityName="com.hawksjamesf.spacecraft.ui.login.SignInActivity"
+            android:name="com.hawksjamesf.spacecraft.ui.signin.SignUpActivity"
+            android:parentActivityName="com.hawksjamesf.spacecraft.ui.signin.SignInActivity"
             android:windowSoftInputMode="adjustPan|stateAlwaysHidden"/>
     </application>
 
