--- a/app/build.gradle
+++ b/app/build.gradle
@@ -173,6 +173,7 @@ static String getLocalIP() {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation project(path: ':location')
+    implementation project(path: ':chatroom')
 //    implementation project(path: ':mockserver')
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:support-vector-drawable:28.0.0'
