将util类下沉到common库中

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -27,6 +27,10 @@ android {
             debuggable true
         }
     }
+    sourceSets {
+        main.java.srcDirs += ["src/main/kotlin"]
+    }
+
 
 }
 
