--- a/chatroom/src/main/AndroidManifest.xml
+++ b/chatroom/src/main/AndroidManifest.xml
@@ -1,2 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.hawksjamesf.chatroom"/>
+          package="com.hawksjamesf.chatroom">
+        <application>
+
+
+        </application>
+</manifest>
