--- a/location/build.gradle
+++ b/location/build.gradle
@@ -39,9 +39,9 @@ android {
         }
     }
     sourceSets {
-        component {
-            java.srcDirs = ['src/component/java']
-        }
+//        component {
+//            java.srcDirs = ['src/component/java']
+//        }
     }
 }
 dependencies {
