--- a/common/build.gradle
+++ b/common/build.gradle
@@ -148,6 +148,8 @@ dependencies {
    *解决方法：需要exclude掉v4包
     */
     api "com.google.android.material:material:1.1.0-alpha01"
+
+    api  'com.airbnb.android:lottie:2.8.0'
     /**
      * ================================ui end=====================================
      */
